# TelemetrySoc

./: CMakeLists.txt  README.md
agent/: CMakeLists.txt  telemetry_agent.c  telemetry_agent.h
api/: CMakeLists.txt  type.h
core/: CMakeLists.txt  event.c  event.h  ring_buffer.c  ring_buffer.h  telemetry_protocol.c  telemetry_protocol.h
docs/: UserManual.md
example/: CMakeLists.txt  demo.cpp
os/include/: CMakeLists.txt  osal_thread.h  osal_time.h  osal_wakeup.h
os/linux/: CMakeLists.txt  osal_thread_linux.c  osal_time_linux.c  osal_wakeup_linux.c
tests/: CMakeLists.txt  test_event.c  test_ring_buffer.c  test_suite.c  test_suite.h
tools/: CMakeLists.txt  udp_console_receiver.cpp
transport/: CMakeLists.txt  mock_transport.hpp  transport.hpp  transport_adapter.cpp  transport_adapter.hpp  transport_c.h  udp_transport.cpp  udp_transport.hpp
